css opdracht 1+2 les 2 afgerond 8-12

--- a/opdracht-1/styles.css
+++ b/opdracht-1/styles.css
@@ -36,10 +36,8 @@ nav a {
     color: hsl(359, 79%, 56%);
 
 }
-nav a.nav-links:visited {
-    color:blue;
-}
-nav a.nav-links:hover {
+
+nav  a:hover {
     color:aquamarine;
 }
 
